--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,6 @@ a.nav-link {
     margin-block: 8px;
 }
 @media (max-width:1100px) {
-    a.nav-link{
-    font-size: 18px;
-    }
     .navbar-nav li{
         padding:8px;
         margin:5px 5px;
@@ -210,7 +207,7 @@ a.mobile-header-logo {
     font-size: 2rem;
     color: var(--clr-white);
 }
-div#navbar-collapse::before {
+/* div#navbar-collapse::before {
     content:'';
     position:absolute;
     inset:0;
@@ -220,7 +217,7 @@ div#navbar-collapse::before {
     background-size: min(400px, 100%);
     opacity: 10%;
     z-index: -1;
-}
+} */
     .navbar-collapse.show{
 
         transform:translatey(0);
